--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>痞子逗的个人页面</title>
+  <link href="styles/style.css" rel="stylesheet"/>
 </head>
 <body>
-  痞子逗的个人页面
+  <p>痞子逗的个人页面</p>
 </body>
 </html>
