--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>痞子逗的个人页面</title>
   <link href="styles/style.css" rel="stylesheet"/>
+  <script src="scripts/main.js" defer></script>
 </head>
 <body>
-  <p>痞子逗的个人页面</p>
+  <h1>痞子逗的个人页面</h1>
+  <p>欢迎你的访问</p>
 </body>
 </html>
