--- a/index.html
+++ b/index.html
@@ -1,13 +1,153 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>痞子逗的个人页面</title>
-  <link href="styles/style.css" rel="stylesheet"/>
-  <script src="scripts/main.js" defer></script>
-</head>
-<body>
-  <h1>痞子逗的个人页面</h1>
-  <p>欢迎你的访问</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Mozilla splash page</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <style>
+      /* header and body setup */
+
+      html {
+        font-family: 'Open Sans', sans-serif;
+        background: url(pattern.png);
+      }
+
+      body {
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+        background-color: white;
+        position: relative;
+      }
+
+      /* Header styling */
+
+      header {
+        height: 150px;
+      }
+
+      header img {
+        width: 100px;
+        position: absolute;
+        right: 32.5px;
+        top: 32.5px;
+      }
+
+      h1 {
+        font-size: 50px;
+        line-height: 140px;
+        margin: 0 0 0 32.5px;
+      }
+
+      /* main section and video styling */
+
+      main {
+        background: #ccc;
+      }
+
+      article {
+        padding: 20px;
+      }
+
+      h2 {
+        margin-top: 0;
+      }
+
+      p {
+        line-height: 2;
+      }
+
+      iframe {
+        float: left;
+        margin: 0 20px 20px 0;
+        max-width: 100%;
+      }
+
+      /* further info links */
+
+      .further-info {
+        clear: left;
+        padding: 40px 0;
+        background: #c13832;
+        box-shadow: inset 0 3px 2px rgba(0,0,0,0.5),
+                    inset 0 -3px 2px rgba(0,0,0,0.5);
+      }
+
+      .further-info a {
+        width: 25%;
+        display: block;
+        float: left;
+      }
+
+      .further-info img {
+        max-width: 100%;
+      }
+
+      .clearfix {
+        clear: both;
+      }
+
+      /* Red panda image */
+
+      .red-panda img {
+        display: block;
+        max-width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Mozilla</h1>
+      <!-- insert <img> element, link to the small
+          version of the Firefox logo -->
+          <img src="firefox_logo-only_RGB.png">
+    </header>
+
+    <main>
+      <article>
+        <!-- insert iframe from youtube -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3412.240743084958!2d121.65673491535074!3d31.214058969325748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35ad89ba437b7af5%3A0xcf8eb503197238be!2z5ZSQ6ZWH56uZ!5e0!3m2!1szh-CN!2s!4v1629453526335!5m2!1szh-CN!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+   
+        <h2>Rocking the free web</h2>
+
+        <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+
+        <p>Click on the images below to find more information about the cool stuff Mozilla does. <a href="https://www.flickr.com/photos/mathiasappel/21675551065/">Red panda picture</a> by Mathias Appel.</p>
+      </article>
+
+      <div class="further-info">
+        <!-- insert images with srcsets and sizes -->
+        <a href="https://www.mozilla.org/en-US/firefox/new/">
+          <img srcset="firefox-logo120.png 120w, firefox-logo400.png 400w"
+          sizes="(max-wdith:480px) 120px, 400px" 
+          src="firefox-logo400.png">
+        </a>
+        <a href="https://www.mozilla.org/">
+          <img srcset="mozilla-dinosaur-head120.png 120w, mozilla-dinosaur-head400.png 400w"
+          sizes="(max-wdith:480px) 120px, 400px" 
+          src="mozilla-dinosaur-head400.png">
+        </a>
+        <a href="https://addons.mozilla.org/">
+          <img srcset="firefox-addons120.jpg 120w, firefox-addons400.jpg 400w"
+          sizes="(max-wdith:480px) 120px, 400px" 
+          src="firefox-addons400.jpg">
+        </a>
+        <a href="https://developer.mozilla.org/en-US/">
+          <img src="mdn.svg">
+        </a>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="red-panda">
+        <!-- insert picture element -->
+        <picture>
+          <source media="(max-width:600px)" srcset="red-panda600.jpg">
+          <img src="red-panda1200.jpg">
+        </picture>
+  
+      </div>
+
+    </main>
+  </body>
 </html>
