--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-          <img src="firefox_logo-only_RGB.png">
+          <img src="firefox-logo400.png">
     </header>
 
     <main>
